Fix issue with invisible account dropdown links.

--- a/lms/static/sass/lms-main.scss
+++ b/lms/static/sass/lms-main.scss
@@ -18,6 +18,10 @@ header.global {
     .dropdown {
       height: 25px;
     }
+
+    .dropdown-menu a {
+      color: #235f9c !important;
+    }
   }
 }
 
